[FIX] dark mode first fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,7 @@
 body{
     font-family: 'Poppins'!important;
     color : var(--body);
-    background: var(--background)
+    background: var(--background);
 }
 a:visited, a:link{
     color: var(--body);
